--- a/flipbook.css
+++ b/flipbook.css
@@ -19,6 +19,7 @@ body {
 #flipbook .page {
     width: 100%;
     height: 100%;
+    border: 1px solid red; /* Add border for debugging */
 }
 
 #flipbook .page img {
