--- a/flipbook.css
+++ b/flipbook.css
@@ -11,7 +11,9 @@ body {
 
 #flipbook {
     background-color: white;
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    width: 80%;
+    height: 70%;
 }
 
 #flipbook .page {
