--- a/flipbook.css
+++ b/flipbook.css
@@ -30,3 +30,11 @@ body {
     height: auto;
     object-fit: contain;
 }
+
+#flipbook .page img.left {
+    object-position: left;
+}
+
+#flipbook .page img.right {
+    object-position: right;
+}
