--- a/flipbook.css
+++ b/flipbook.css
@@ -23,10 +23,21 @@ body {
     align-items: center;
     width: 100%;
     height: 100%;
+    position: relative;
 }
 
 #flipbook .page img {
-    width: 100%;
+    width: 200%;
     height: auto;
-    object-fit: contain;
+    position: absolute;
+}
+
+#flipbook .page img.left-half {
+    left: 0;
+    clip: rect(0, 50%, 100%, 0);
+}
+
+#flipbook .page img.right-half {
+    right: 0;
+    clip: rect(0, 100%, 100%, 50%);
 }
