--- a/flipbook.css
+++ b/flipbook.css
@@ -4,7 +4,7 @@ body {
     background-color: #f0f0f0;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start; /* Change to flex-start to align items at the top */
     height: 100vh;
     margin: 0;
 }
