--- a/flipbook.css
+++ b/flipbook.css
@@ -28,13 +28,13 @@ body {
 
 #flipbook .page img {
     width: 100%;
-    height: 100%; /* Ensure the image fills the page height */
+    height: auto;
 }
 
 #flipbook .page .left-half img,
 #flipbook .page .right-half img {
     width: 200%;
-    height: 100%; /* Ensure the image fills the page height */
+    height: auto;
     position: absolute;
     top: 0; /* Ensure the image starts at the top */
 }
