--- a/flipbook.css
+++ b/flipbook.css
@@ -31,6 +31,22 @@ body {
     height: auto;
 }
 
+#flipbook .page .left-half,
+#flipbook .page .right-half {
+    width: 50%;
+    height: 100%;
+    position: absolute;
+    top: 0; /* Ensure the image starts at the top */
+}
+
+#flipbook .page .left-half {
+    left: 0;
+}
+
+#flipbook .page .right-half {
+    right: 0;
+}
+
 #flipbook .page .left-half img,
 #flipbook .page .right-half img {
     width: 200%;
