--- a/flipbook.css
+++ b/flipbook.css
@@ -26,7 +26,7 @@ body {
     position: absolute; /* Position images absolutely within the page */
     top: 50%; /* Center vertically */
     left: 50%; /* Center horizontally */
-    width: 200%; /* Fill double the width */
+    width: 200%; /* Fill double the width of the page */
     height: auto; /* Maintain aspect ratio */
     transform: translate(-50%, -50%); /* Center the image */
 }
@@ -48,7 +48,6 @@ body {
 /* Debugging borders */
 .page {
     border: 1px solid red; /* Show page frame */
-    background-color: lightgrey; /* Background color for visualization */
 }
 
 .page img {
